corrected checkout button on safari mobile

--- a/client/src/Pages/Cart.css
+++ b/client/src/Pages/Cart.css
@@ -20,6 +20,7 @@ hr{
     background-color: #1f1815;
     padding: 2% 8%;
     margin-right: 4%;
+    width: 40%;
 }
 
 #keep-shopping{
